--- a/styles/sass/abstracts/mixins/_common-mixins.sass
+++ b/styles/sass/abstracts/mixins/_common-mixins.sass
@@ -1,6 +1,10 @@
 @use '../_fonts' as *
 @use '../varibles' as *
 @use '../../../../node_modules/breakpoint-slicer' as bs
+//? breakpoint-slicer
+//* Breakpoint:   0       200px     400px     600px     800px     1000px    1200px    1400px       
+//*             ├─────────┼─────────┼─────────┼─────────┼─────────┼─────────┼─────────┼─────────>
+//* Slice:            xxs        xs        s         m         l         xl       xxl       xxxl   
 
 //?mixins
 // common
