--- a/styles/sass/components/_detail.sass
+++ b/styles/sass/components/_detail.sass
@@ -325,7 +325,7 @@ div.detail-container
                             >div:last-child
                                 border-radius: 0 .5em .5em 0
                         >div.chart-label
-                            @include grid( $columns: 1fr 1fr )
+                            @include grid( $columns: 1fr 1fr, $gap: .5em )
                             >div
                                 @include flex( $justify: flex-start)
                                 padding: .5em .75em
