--- a/styles/sass/abstracts/_varibles.sass
+++ b/styles/sass/abstracts/_varibles.sass
@@ -29,6 +29,7 @@ $bgc-subsidiary-subtle-soft: #3f0010
 $bgc-meta: rgba(109,200,73,.4)
 $bgc-overlay: rgba(3, 3, 3, 0.7)
 $bgc-transparent: rgba(0, 0, 0, 0)
+$bgc-cooler-transparent: hsla(0,0%,100%,.07)
 //* admin
 $fc-admin: #10161b
 $fc-admin-delete: #c70000 
