--- a/styles/sass/abstracts/mixins/_detail-mixins.sass
+++ b/styles/sass/abstracts/mixins/_detail-mixins.sass
@@ -3,6 +3,9 @@
 @use './_common-mixins' as *
 @use '../../../../node_modules/breakpoint-slicer' as bs
 
+@mixin label-sm
+    color: $fc-tag
+    display: block
 @mixin label-md
     font-size: 1.2em
     color: $fc-tag
